examples/external-auth/oauth2proxy.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2proxy
  name: oauth2proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2proxy
